--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -34,11 +34,10 @@
         android:layout_alignParentEnd="true"
         android:onClick="onArticleSearch"/>
 
-    <GridView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gvResults"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvResults"
         android:layout_below="@+id/btnSearch"
-        android:layout_centerHorizontal="true"
-        android:numColumns="4" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
