--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:background="?android:attr/selectableItemBackground"
     android:layout_height="wrap_content">
     <!--use wrap_content for the layout_height for RecyclerView-->
 
     <ImageView
+        tools:ignore="ContentDescription"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:id="@+id/ivImage"
@@ -16,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/tvTitle"
+
         android:maxLines="2"
         android:ellipsize="end"
         android:text="@string/text_view"/>
