--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -16,10 +16,9 @@
         android:scaleType="center"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/tvTitle"
-
         android:maxLines="2"
         android:ellipsize="end"
         android:text="@string/text_view"/>
