--- a/app/src/main/res/values/orders_array.xml
+++ b/app/src/main/res/values/orders_array.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="orders_array">
+        <item>None</item>
         <item>Newest</item>
         <item>Oldest</item>
     </string-array>
