--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -21,7 +21,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvResults"
-
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
