--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -12,7 +12,7 @@
 
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/ic_filter"
+        android:icon="@drawable/ic_dark_filter"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="ifRoom" />
