rounded top corners of image

--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -8,19 +8,30 @@
 
 
     <!--use wrap_content for the layout_height for RecyclerView-->
+    <!--<ImageView-->
+        <!--tools:ignore="ContentDescription"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:minHeight="220dp"-->
+        <!--android:id="@+id/ivImage"-->
+        <!--android:src="@mipmap/ic_launcher"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:visibility="visible"-->
+        <!--android:scaleType="centerCrop" />-->
 
-    <!--android:layout_height="wrap_content"-->
-
-    <ImageView
-        tools:ignore="ContentDescription"
+    <com.joooonho.SelectableRoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/rounded"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:src="@drawable/ic_filter"
+        android:scaleType="centerCrop"
         android:minHeight="220dp"
-        android:id="@+id/ivImage"
-        android:src="@mipmap/ic_launcher"
-        android:adjustViewBounds="true"
-        android:visibility="visible"
-        android:scaleType="centerCrop" />
+        app:sriv_left_top_corner_radius="10dip"
+        app:sriv_right_top_corner_radius="10dip"
+        app:sriv_left_bottom_corner_radius="0dip"
+        app:sriv_right_bottom_corner_radius="0dip"
+        app:sriv_border_width="0dip" />
 
     <TextView
         android:layout_width="match_parent"
