--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -14,7 +14,7 @@
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_dark_filter"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/filters"
         app:showAsAction="ifRoom" />
 
 </menu>
